fixed overflow issue and updated feed scrolling

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,11 @@
 .center-justification {
+  position: fixed;
   display: flex;
   justify-content: flex-start;
   max-width: 80%;
-  height: 100%;
-  background-color: white;
+  max-height: 86%;
+  background-color: transparent;
   flex-direction: column;
+  overflow: auto;
 }
+
